# Mandelbrot-Set

./: .gitignore  CMakeLists.txt  README.md
Headers/: Fractal.hpp  Iterations.hpp  Shader.hpp
Shaders/: Shader.fs  Shader.vs
Source/: Fractal.cpp  Iterations.cpp  Main.cpp  Shader.cpp
